@@ -1,3 +1,9 @@
+2008-06-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* macaroon/playback/keypress_actions.py (TypeAction._charType): 
+	  Press "shift" if the character is uppercase, I don't know if
+	  this is a very localizable solution, but what the hell.
+
 2008-06-03  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/utils.py: Added a keyval to key code function.
